k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimule-api-svc
  namespace: minimule
spec:
  selector:
    app: minimule-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
